goybubenapi/collector/collector.peg
package collector

type Collector Peg {
}

words <- (word / anychar)*
word <- [ԱԲԳԴԵԶԷԸԹԺԻԼԽԾԿՀՁՂՃՄՅՆՇՈՉՊՋՌՍՎՏՐՑՒՓՔՕՖՈաբգդեզէըթժիլխծկհձղճմյնշոչպջռսվտրցւփքօֆոև]+
anychar <- .
